[tool.poetry]
name = "cma-llapi"
version = "0.1.0"
description = "Collaborative Multi-Agent via Unity Low-Level API"
authors = ["Nicholas Akin <nicholasakin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
